포스트 상세 페이지에 부트스트랩 적용하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="ko">
     <head>
     <title>Blog : sunny</title>
-     <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/9c0a94a110.js" crossorigin="anonymous"></script>
 
     </head>
