--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,6 +17,9 @@
   <!-- Custom styles for this template -->
   <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/9c0a94a110.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -84,6 +87,23 @@
 
       <!-- Post Content -->
       <p>{{post.content}}</p>
+
+      {% if post.file_upload %}
+        <a href="{{post.file_upload.url}}" type="button" class="btn btn-outline-dark" role="button" download>
+          Download:
+          {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+            <i class="far fa-file-excel"></i>
+          {% elif post.get_file_ext == 'cvs' %}
+            <i class="far fa-file-alt"></i>
+          {% elif post.get_file_ext == 'docx' %}
+           <i class="far fa-file-word"></i>
+          {% else %}
+            <i class="far fa-file-alt"></i>
+          {% endif %}
+
+          {{ post.get_file_name }}
+        </a>
+      {% endif %}
 
       <!-- Comments Form -->
       <div class="card my-4">
