포스트 목록에 포스트가 하나도 없는 경우에도 테스트하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -76,9 +76,9 @@
 
     <div class="container">
         <div class="row my-3">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9" id="main-area">
 
-
+                  {% if post_list.exists %}
                   {% for p in post_list %}
                     <!-- Blog Post -->
                 <div class="card mb-4">
@@ -102,6 +102,9 @@
                 </div>
 
                 {% endfor %}
+                {% else %}
+                    <h1>아직 게시물이 없습니다.</h1>
+                {% endif %}
 
                                 <!-- Pagination -->
                 <ul class="pagination justify-content-center mb-4">
