내비게이션바와 푸터 모듈화하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main_area %}
-<div id=""post-area">
+<div id="post-area">
 
 <!-- Title -->
 <h1 class="mt-4">{{post.title}}</h1>
