--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home </a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/blog/">Blog</a>
@@ -106,22 +106,21 @@
 
 
             <!-- Categories Widget -->
-            <div class="card my-4" id="categories_card">
-                <h5 class="card-header">Categories</h5>
+            <div class="card my-4" id="categories-card">
+                <h5 class="card-header">categories</h5>
                 <div class="card-body">
                     <div class="row">
 
-                        <ul >
+                        <ul>
                             {% for category in categories %}
                             <li>
                                 <a href="{{ category.get_absolute_url }}">{{ category.name }} ({{ category.post_set.count }})</a>
                             </li>
                             {% endfor %}
                             <li>
-                                <a href="/blog/category/no_category/">미분류({{ no_category_post_count }})</a>
+                                <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
                             </li>
                         </ul>
-
 
 
                     </div>
