--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,119 +1,123 @@
 {% extends 'blog/base.html' %}
 
 {% block head_title %}
-{{post.title }} | Blog
+    {{ post.title }} | Blog
 {% endblock %}
 
 {% block main_area %}
 <div id="post-area">
-   {% if p.category %}
-        <span class="badge badge-secondary float-right">{{post.category}}</span>
+    {% if post.category %}
+    <span class="badge badge-secondary float-right">{{ post.category }}</span>
+    {% else %}
+    <span class="badge badge-secondary float-right">미분류</span>
+    {% endif %}
+    <!-- Title -->
+    <h1 class="mt-4">{{ post.title }}</h1>
+    {% if post.hook_text %}
+    <h5 class="text-muted">{{ post.hook_text }}</h5>
+    {% endif %}
+
+    <!-- Author -->
+    <p class="lead">
+        by
+        <a href="#">{{ post.author | upper }}</a>
+    </p>
+
+    <hr>
+
+    <!-- Date/Time -->
+    <p>Posted on {{ post.created_at }}</p>
+
+    <hr>
+
+    <!-- Preview Image -->
+    {% if post.head_image %}
+    <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}">
+    {% else %}
+    <img class="card-img-top" src="https://picsum.photos/seed/{{ post.id }}/600/200" alt="{{ p.title }}">
+    {% endif %}
+
+    <hr>
+
+    <!-- Post Content -->
+    <p>{{ post.content }}</p>
+
+    {% if post.tags.exists %}
+        <i class="fas fa-tags"></i>
+        {% for tag in post.tags.iterator %}
+            <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+        {% endfor %}
+        <br/>
+        <br/>
+    {% endif %}
+
+    {% if post.file_upload %}
+    <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" role="button" download>
+        Download:
+        {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+        <i class="far fa-file-excel"></i>
+        {% elif post.get_file_ext == 'csv' %}
+        <i class="fas fa-file-csv"></i>
+        {% elif post.get_file_ext == 'docx' %}
+        <i class="far fa-file-word"></i>
         {% else %}
-         <span class="badge badge-secondary float-right">미분류</span>
+        <i class="far fa-file-alt"></i>
         {% endif %}
 
-<!-- Title -->
-<h1 class="mt-4">{{post.title}}</h1>
-{% if post.hook_text %}
-<h5 class="text-muted">{{ post.hook_text }}</h5>
-{% endif %}
+        {{ post.get_file_name }}
+    </a>
+    {% endif %}
 
-<!-- Author -->
-<p class="lead">
-  by
-  <a href="#">{{ post.author | upper }}</a>
-</p>
-
-<hr>
-
-
-<!-- Date/Time -->
-<p>Posted on {{ post.created_at }}</p>
-
-<hr>
-
-<!-- Preview Image -->
-{% if post.head_image %}
-<img class="img-fluid rounded" src="{{post.head_image.url}}" alt="{{post.title}}">
-{% else %}
-<img class="card-img-top" src="https://picsum.photos/seed/{{ post.id }}/600/200" alt="{{p.title}}">
-{% endif %}
-
-<hr>
-
-<!-- Post Content -->
-<p>{{post.content}}</p>
-
-{% if post.file_upload %}
-<a href="{{post.file_upload.url}}" type="button" class="btn btn-outline-dark" role="button" download>
-  Download:
-  {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
-  <i class="far fa-file-excel"></i>
-  {% elif post.get_file_ext == 'cvs' %}
-  <i class="far fa-file-alt"></i>
-  {% elif post.get_file_ext == 'docx' %}
-  <i class="far fa-file-word"></i>
-  {% else %}
-  <i class="far fa-file-alt"></i>
-  {% endif %}
-
-  {{ post.get_file_name }}
-</a>
-{% endif %}
-  <hr>
+    <hr>
 </div>
-
 
 <div id="comment-area">
-<!-- Comments Form -->
-<div class="card my-4">
-  <h5 class="card-header">Leave a Comment:</h5>
-  <div class="card-body">
-    <form>
-      <div class="form-group">
-        <textarea class="form-control" rows="3"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
-</div>
-
-<!-- Single Comment -->
-<div class="media mb-4">
-  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-  <div class="media-body">
-    <h5 class="mt-0">Commenter Name</h5>
-    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-  </div>
-</div>
-
-<!-- Comment with nested comments -->
-<div class="media mb-4">
-  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-  <div class="media-body">
-    <h5 class="mt-0">Commenter Name</h5>
-    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-    <div class="media mt-4">
-      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-      <div class="media-body">
-        <h5 class="mt-0">Commenter Name</h5>
-        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-      </div>
+    <!-- Comments Form -->
+    <div class="card my-4">
+        <h5 class="card-header">Leave a Comment:</h5>
+        <div class="card-body">
+            <form>
+                <div class="form-group">
+                    <textarea class="form-control" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
 
-    <div class="media mt-4">
-      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-      <div class="media-body">
-        <h5 class="mt-0">Commenter Name</h5>
-        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-      </div>
+    <!-- Single Comment -->
+    <div class="media mb-4">
+        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+        <div class="media-body">
+            <h5 class="mt-0">Commenter Name</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        </div>
     </div>
 
-  </div>
-</div>
-</div>
+    <!-- Comment with nested comments -->
+    <div class="media mb-4">
+        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+        <div class="media-body">
+            <h5 class="mt-0">Commenter Name</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+            <div class="media mt-4">
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                <div class="media-body">
+                    <h5 class="mt-0">Commenter Name</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+
+            <div class="media mt-4">
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                <div class="media-body">
+                    <h5 class="mt-0">Commenter Name</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
-
-
