--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,74 +1,67 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
+    <h1>
+        Blog
+        {% if category %}
+            <span class="badge badge-secondary">{{ category }}</span>
+        {% endif %}
+        {% if tag %}
+            <span class="badge badge-light">
+                <i class="fas fa-tags"></i> {{ tag }} ({{ tag.post_set.count }})
+            </span>
+        {% endif %}
+    </h1>
 
-<h1>
+    {% if post_list.exists %}
 
-    Blog
-    {% if category %}
-      <span class="badge badge-secondary ">{{ category }}</span>
-    {% endif %}
-
-
-
-
-
-
-</h1>
-{% if post_list.exists %}
-{% for p in post_list %}
-
-
-<!-- Blog Post -->
-<div class="card mb-4" id="post-{{ p.id }}">
-    {% if p.head_image %}
-    <img class="card-img-top" src="{{p.head_image.url}}" alt="{{p.title}}">
-    {% else %}
-    <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/600/200" alt="{{p.title}}">
-    {% endif %}
-    <div class="card-body">
-        {% if p.category %}
-        <span class="badge badge-secondary float-right">{{p.category}}</span>
+    {% for p in post_list %}
+    <!-- Blog Post -->
+    <div class="card mb-4" id="post-{{ p.id }}">
+        {% if p.head_image %}
+        <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p.title }}">
         {% else %}
-         <span class="badge badge-secondary float-right">미분류</span>
+        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/600/200" alt="{{ p.title }}">
         {% endif %}
-        <h2 class="card-title">{{p.title}}</h2>
-        {% if p.hook_text %}
-        <h5 class="text-muted">{{ p.hook_text }}</h5>
-        {% endif %}
-        <p class="card-text">{{p.content | truncatechars:45 }}</p>
+        <div class="card-body">
+            {% if p.category %}
+            <span class="badge badge-secondary float-right">{{ p.category }}</span>
+            {% else %}
+            <span class="badge badge-secondary float-right">미분류</span>
+            {% endif %}
+            <h2 class="card-title">{{ p.title }}</h2>
+            {% if p.hook_text %}
+            <h5 class="text-muted">{{ p.hook_text }}</h5>
+            {% endif %}
+            <p class="card-text">{{ p.content | truncatewords:45 }}</p>
 
-        {% if p.tags.exists %}
-            <i class="fas fa-tags"></i>
-            {% for tag in p.tags.iterator %}
-             <a href="{{ tag.get_absolute.url }}"><span class="badge badge-light">{{ tag }}</span></a>
-            {% endfor %}
-        <br/>
-        <br/>
-        {% endif %}
+            {% if p.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in p.tags.iterator %}
+                    <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+                {% endfor %}
+                <br/>
+                <br/>
+            {% endif %}
 
-        <a href="{{p.get_absolute_url}}" class="btn btn-primary">Read More &rarr;</a>
+            <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+        </div>
+        <div class="card-footer text-muted">
+            Posted on {{ p.created_at }} by
+            <a href="#">{{ p.author | upper }}</a>
+        </div>
     </div>
-    <div class="card-footer text-muted">
-        Posted on {{p.created_at}} 2020 by
-        <a href="#">{{ p.author | upper }}</a>
-    </div>
-</div>
-
-{% endfor %}
-{% else %}
-<h1>아직 게시물이 없습니다.</h1>
-{% endif %}
-
-<!-- Pagination -->
-<ul class="pagination justify-content-center mb-4">
-    <li class="page-item">
-        <a class="page-link" href="#">&larr; Older</a>
-    </li>
-    <li class="page-item disabled">
-        <a class="page-link" href="#">Newer &rarr;</a>
-    </li>
-</ul>
-
-
+    {% endfor %}
+    {% else %}
+    <h1>아직 게시물이 없습니다</h1>
+    {% endif %}
+    <!-- Pagination -->
+    <ul class="pagination justify-content-center mb-4">
+        <li class="page-item">
+            <a class="page-link" href="#">&larr; Older</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Newer &rarr;</a>
+        </li>
+    </ul>
 {% endblock %}
