--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block head_title %}
-    {{ post.title }} | Blog
+{{ post.title }} | Blog
 {% endblock %}
 
 {% block main_area %}
@@ -25,6 +25,10 @@
 
     <hr>
 
+    {% if user.is_authenticated and user == post.author %}
+    <a type="button" href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; Edit Post</a>
+    {% endif %}
+
     <!-- Date/Time -->
     <p>Posted on {{ post.created_at }}</p>
 
@@ -43,12 +47,12 @@
     <p>{{ post.content }}</p>
 
     {% if post.tags.exists %}
-        <i class="fas fa-tags"></i>
-        {% for tag in post.tags.iterator %}
-            <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
-        {% endfor %}
-        <br/>
-        <br/>
+    <i class="fas fa-tags"></i>
+    {% for tag in post.tags.iterator %}
+    <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+    {% endfor %}
+    <br/>
+    <br/>
     {% endif %}
 
     {% if post.file_upload %}
