--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,85 +9,14 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <div class="container">
-        <a class="navbar-brand" href="/">Do It Django</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/blog/">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about_me/">About Me</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
-                </li>
-        </div>
-    </div>
-</nav>
-
-<!-- Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginModalLabel"><i class="fas fa-sign-in-alt"></i>Log In</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fab fa-google"></i>Log in with Google</button>
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-user"></i>Log in with Username</button>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-envelope"></i>Sign up with Email</button>
-                    </div>
-                </div>
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
+{% include 'blog/navbar.html' %}
 
 <div class="container">
     <div class="row my-3">
         <div class="col-md-8 col-lg-9" id="main-area">
-
-
-
-
             {% block main_area %}
             {% endblock %}
         </div>
-
-
-
-
         <div class="col-md-4 col-lg-3">
             <!-- Search Widget -->
             <div class="card my-4">
@@ -96,18 +25,15 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search for...">
                         <span class="input-group-append">
-                <button class="btn btn-secondary" type="button">Go!</button>
-              </span>
+                            <button class="btn btn-secondary" type="button">Go!</button>
+                            </span>
                     </div>
                 </div>
             </div>
 
-
-
-
             <!-- Categories Widget -->
             <div class="card my-4" id="categories-card">
-                <h5 class="card-header">categories</h5>
+                <h5 class="card-header">Categories</h5>
                 <div class="card-body">
                     <div class="row">
 
@@ -126,10 +52,12 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
+
 </div>
-</div>
+
 
 
 
