--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,4 +1,3 @@
-
 {% load socialaccount %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -16,7 +15,7 @@
                     <a class="nav-link" href="/blog/">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about_me/">About me</a>
+                    <a class="nav-link" href="/about_me/">About Me</a>
                 </li>
             </ul>
 
@@ -25,18 +24,6 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            {% if user.socialaccount_set.first.get_avatar_url %}
-                                <img class="rounded-circle"
-                                     width="25px"
-                                     src="{{ user.socialaccount_set.first.get_avatar_url }}"
-                                     alt="{{ user.username }}">
-                            {% else %}
-                                <img class="rounded-circle"
-                                     width="25px"
-                                     src="https://doitdjango.com/avatar/id/143/e3445497d896a175/svg/{{ user.email }}"
-                                     alt="{{ user.username }}">
-                            {% endif %}
-                            &nbsp;
                             {{ user.username }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -67,10 +54,10 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <a role="button" href="{% provider_login_url 'google' %}" type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fab fa-google"></i> Log in with Google</a>
-                        <a role="button" href="/accounts/login/" type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-user"></i> Log in with username</a>
+                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-user"></i> Log in with username</button>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <a role="button" href="/accounts/signup/" type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-envelope"></i> Sign up with E-mail</a>
+                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-envelope"></i> Sign up with E-mail</button>
                     </div>
                 </div>
             </div>
