--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -80,12 +80,16 @@
     <div class="card my-4">
         <h5 class="card-header">Leave a Comment:</h5>
         <div class="card-body">
+            {% if user.is_authenticated %}
             <form>
                 <div class="form-group">
                     <textarea class="form-control" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            {% else %}
+                <a role="button" type="button"  class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="madal" data-target="#loginModal">Log in and leave a comment</a>
+            {% endif %}
         </div>
     </div>
 
