--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
-
+{% load crispy_forms_tags %}
 {% block head_title %}
-{{ post.title }} | Blog
+    {{ post.title }} | Blog
 {% endblock %}
 
 {% block main_area %}
@@ -26,9 +26,8 @@
     <hr>
 
     {% if user.is_authenticated and user == post.author %}
-    <a type="button" href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; Edit Post</a>
+        <a type="button" href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; Edit Post</a>
     {% endif %}
-
     <!-- Date/Time -->
     <p>Posted on {{ post.created_at }}</p>
 
@@ -47,12 +46,12 @@
     <p>{{ post.get_content_markdown | safe }}</p>
 
     {% if post.tags.exists %}
-    <i class="fas fa-tags"></i>
-    {% for tag in post.tags.iterator %}
-    <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
-    {% endfor %}
-    <br/>
-    <br/>
+        <i class="fas fa-tags"></i>
+        {% for tag in post.tags.iterator %}
+            <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+        {% endfor %}
+        <br/>
+        <br/>
     {% endif %}
 
     {% if post.file_upload %}
@@ -81,14 +80,15 @@
         <h5 class="card-header">Leave a Comment:</h5>
         <div class="card-body">
             {% if user.is_authenticated %}
-            <form>
+            <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
+                {% csrf_token %}
                 <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
+                    {{ comment_form | crispy  }}
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             {% else %}
-                <a role="button" type="button"  class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="madal" data-target="#loginModal">Log in and leave a comment</a>
+                <a role="button" type="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
             {% endif %}
         </div>
     </div>
@@ -106,7 +106,6 @@
         {% endfor %}
     {% endif %}
 
-    </div>
 
-
+</div>
 {% endblock %}
