--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -85,7 +85,7 @@
                 <div class="form-group">
                     {{ comment_form | crispy  }}
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary btn-float-right">Submit</button>
             </form>
             {% else %}
                 <a role="button" type="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
@@ -94,16 +94,25 @@
     </div>
 
     {% if post.comment_set.exists %}
-        {% for comment in post.comment_set.iterator %}
-        <!-- Single Comment -->
-        <div class="media mb-4" id="comment-{{ comment.pk }}">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-                <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp; <small class="text-muted">{{ comment.created_at }}</small></h5>
-                {{ comment.content | linebreaks }}
-            </div>
+    {% for comment in post.comment_set.iterator %}
+    <!-- Single Comment -->
+    <div class="media mb-4" id="comment-{{ comment.pk }}">
+        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+        <div class="media-body">
+            {% if user.is_authenticated and comment.author == user %}
+            <a class="btn btn-sm btn-info float-right"
+               role="button"
+               id="comment-{{ comment.pk }}-update-btn"
+               href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+            {% endif %}
+            <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp; <small class="text-muted">{{ comment.created_at }}</small></h5>
+            {{ comment.content | linebreaks }}
+            {% if comment.is_updated %}
+                <p class="text-muted float-right">Updated: {{ comment.updated_at }}</p>
+            {% endif %}
         </div>
-        {% endfor %}
+    </div>
+    {% endfor %}
     {% endif %}
 
 
