--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -14,7 +14,7 @@
             <input type="text" name="tags_str" id="id_tags_str" class="textinput textInput form-control">
         </div>
     </table>
-    <button type="submit" class="btn btn-primary float-right"> Submit </button>
+    <button type="submit" class="btn btn-primary btn-float-right"> Submit </button>
 </form>
 {{form.media}}
 {% endblock %}
