댓글 삭제 기능 만들기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
 {% block head_title %}
-    {{ post.title }} | Blog
+{{ post.title }} | Blog
 {% endblock %}
 
 {% block main_area %}
@@ -26,7 +26,7 @@
     <hr>
 
     {% if user.is_authenticated and user == post.author %}
-        <a type="button" href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; Edit Post</a>
+    <a type="button" href="/blog/update_post/{{ post.pk }}/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; Edit Post</a>
     {% endif %}
     <!-- Date/Time -->
     <p>Posted on {{ post.created_at }}</p>
@@ -46,12 +46,12 @@
     <p>{{ post.get_content_markdown | safe }}</p>
 
     {% if post.tags.exists %}
-        <i class="fas fa-tags"></i>
-        {% for tag in post.tags.iterator %}
-            <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
-        {% endfor %}
-        <br/>
-        <br/>
+    <i class="fas fa-tags"></i>
+    {% for tag in post.tags.iterator %}
+    <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+    {% endfor %}
+    <br/>
+    <br/>
     {% endif %}
 
     {% if post.file_upload %}
@@ -85,10 +85,10 @@
                 <div class="form-group">
                     {{ comment_form | crispy  }}
                 </div>
-                <button type="submit" class="btn btn-primary btn-float-right">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             {% else %}
-                <a role="button" type="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
+            <a role="button" type="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
             {% endif %}
         </div>
     </div>
@@ -100,10 +100,45 @@
         <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
         <div class="media-body">
             {% if user.is_authenticated and comment.author == user %}
-            <a class="btn btn-sm btn-info float-right"
-               role="button"
-               id="comment-{{ comment.pk }}-update-btn"
-               href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+            <div class="float-right">
+
+                <a class="btn btn-sm btn-info"
+                   role="button"
+                   id="comment-{{ comment.pk }}-update-btn"
+                   href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+                <a class="btn btn-sm btn-danger"
+                   role="button"
+                   id="comment-{{ comment.pk }}-delete-btn"
+                   data-toggle="modal"
+                   data-target="#deleteCommentModal-{{ comment.pk }}"
+                   href="#">delete</a>
+            </div>
+
+            <!-- Modal {{ comment.pk }} -->
+            <div class="modal fade" id="deleteCommentModal-2 -{{ comment.pk }}" tabindex="-1" aria-labelledby="deleteCommentModal-{{ comment.pk }}-ModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteCommentModalLabel-{{ comment.pk }}">Are You Sure?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <del>{{ comment | linebreaks }}</del>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <a role="button"
+                               type="button"
+                               class="btn btn-danger"
+                               href="/blog/delete_comment/{{ comment.pk }}/">
+                                Delete
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             {% endif %}
             <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp; <small class="text-muted">{{ comment.created_at }}</small></h5>
             {{ comment.content | linebreaks }}
