--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,18 +1,194 @@
 <!DOCTYPE html>
-<html lang="ko">
+{% load static %}
+<html lang="ko" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>치킨땡겨요.....배고픕니다.</title>
+    <title>About SUN</title>
+    <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'single_pages/css/about_me.css' %}" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/9c0a94a110.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <a href="/blog/">Blog</a>
-        <a href="/about_me/">About me</a>
-    </nav>
+{% include 'blog/navbar.html' %}
 
-    <h1>안녕하세요 . 오늘 한강갑니다. </h1>
-    <h2>이력 </h2>
-    <h3>포트폴리오 </h3>
+<section>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-8">
 
+                <h1>안녕하세요. 김민선입니다. </h1>
+                <br/>
+                <p>산책과 알고리즘 문제풀이를 좋아합니다.
+                     <br/>
+                    디지털 컨버전스 반에서 공부를 하고있습니다.
+                     <br/>
+                    파이썬 장고 sql을 주로 사용합니다.
+                     <br/>
+                    정보처리기사 자격증이 있습니다.
+                </p>
+
+                <ul>
+                    <li>이력</li>
+                    <ul>
+                        <li>웹개발</li>
+                        <li>정보처리기사</li>
+                    </ul>
+
+                        <li>교육</li>
+                    <ul>
+                        <li>ict폴리텍 디지털 컨버전스 과정 6개월 수료</li>
+                    </ul>
+                </ul>
+
+            </div>
+            <div class="col-lg-4">
+                <img class="img-fluid" src="{% static 'single_pages/images/sun.jpg' %}">
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-light margin-for-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>포트폴리오</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#inflearn_django">
+                    <img class="card-img-top" src="{% static 'single_pages/images/토끼.jpeg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">귀여운 깡총 토끼</h5>
+                        <p>토끼는 눈이 빨갛다 예전에 어릴때 할머니댁 동네에서 토끼고기 먹는걸 본 적이있다.</p>
+                    </div>
+
+                </div>
+            </div>
+             <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#inflearn_django2">
+                    <img class="card-img-top" src="{% static 'single_pages/images/야경.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">한강 야경 그레잇</h5>
+                        <p>요즘 한강 진짜 이쁨 특히 잠원쪽 가을이 참 놀기좋다</p>
+                    </div>
+
+                </div>
+            </div>
+             <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#inflearn_django3">
+                    <img class="card-img-top" src="{% static 'single_pages/images/제주도.jpeg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">제주도</h5>
+                        <p>언젠가 제주도에 간적이 있었다. 또 언제 갈려나</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Modal -->
+<div class="modal fade" id="inflearn_django" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">귀여운 깡총 토끼</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <img class="img-fluid" src="{% static 'single_pages/images/토끼.jpeg' %}">
+                    </div>
+                    <div class="col-lg-5">
+                        <p>
+                            토끼는 눈이 빨갛다 예전에 어릴때 할머니댁 동네에서 토끼고기 먹는걸 본 적이있다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal2 -->
+<div class="modal fade" id="inflearn_django2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">한강 야경 그레잇</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <img class="img-fluid" src="{% static 'single_pages/images/야경.jpg' %}">
+                    </div>
+                    <div class="col-lg-5">
+                        <p>
+                            요즘 한강 진짜 이쁨 특히 잠원쪽 가을이 참 놀기좋다
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal3 -->
+<div class="modal fade" id="inflearn_django3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">제주도</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <img class="img-fluid" src="{% static 'single_pages/images/제주도.jpeg' %}">
+                    </div>
+                    <div class="col-lg-5">
+                        <p>
+                           언젠가 제주도에 간적이 있었다. 또 언제 갈려나
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="fixed-bottom">
+{% include 'blog/footer.html' %}
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
